Move *.js to scripts/ , update index.html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <!--<script type="text/javascript" src="script.js"></script>-->
     
     <!--TERAZ UŻYWAMY TEGO-->
-    <script type="text/javascript" src="Column.js"></script>
-    <script type="text/javascript" src="Card.js"></script>
-    <script type="text/javascript" src="Board.js"></script>
-    <script type="text/javascript" src="App.js"></script>
+    <script type="text/javascript" src="scripts/Column.js"></script>
+    <script type="text/javascript" src="scripts/Card.js"></script>
+    <script type="text/javascript" src="scripts/Board.js"></script>
+    <script type="text/javascript" src="scripts/App.js"></script>
 </body>
 </html>
